# SuneungCalc

./: Cargo.toml  README.md
src/: history.rs  lib.rs  main.rs  score.rs  suneung_data.rs  university_weight.rs
